--- a/client/views/template/aboutUs.html
+++ b/client/views/template/aboutUs.html
@@ -1,7 +1,7 @@
 <template name="aboutUs">
 
 <div class="col-xs-12 col-lg-6 " style="padding:30px;">
-<div class="row" id="page2">
+<div class="row" id="aboutUs">
 <h1  align="center" > About Us </h1>
 {{# each aboutUs}}
 
