--- a/client/views/template/catering.html
+++ b/client/views/template/catering.html
@@ -2,7 +2,7 @@
 <template name="catering">
 <div class="col-xs-12 col-lg-6 " style="padding:30px;">
 <div class="row">
-<h1  align="center" id="page3"> Catering </h1>
+<h1  align="center" id="catering"> Catering </h1>
 
 {{# each catering}}
 
