even breaking items

--- a/client/views/template/footer.html
+++ b/client/views/template/footer.html
@@ -2,13 +2,13 @@
 
   <footer id="footer" class="footer">
       <div class="row"   id="address"> 
-        <div class="copyright text-center"> © 2015 Powered by Websheets </div>
+        <div class="copyright col-xs-12 text-center">Powered by Websheets&#8482; </div>
         
-        <div class="address col-xs-6"> 123 Pike Place Market,<br>
+        <div class="address col-xs-12"> 123 Pike Place Market,<br>
           Australia <br>
           <a href="tel:+1-206-345-6789" class="phone">(206) 345 6789</a> 
         </div>
-        <div class="pull-right col-xs-6" align="right">
+        <div class="pull-right col-xs-12" align="right">
           <div class="head-social"> <a href="#"><i class="fa fa-twitter fa-2x"></i></a> <br>
             <a href="#">@dosaexpress</a> </div>
         </div>
