--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -3,7 +3,7 @@
 
 <header class="shadow" >
   <div id="logo"><a href="#main"><img  src="img/dosa-logo2.png" width="100" alt="Homepage" ></a></div>
-  <div id="cd-hamburger-menu"><a class="cd-img-replace" href="#0">Menu</a></div>
+  <div id="cd-hamburger-menu"><a class="cd-img-replace hamburgerMenu" href="#0">Menu</a></div>
   <div id="cd-cart-trigger"><a class="cd-img-replace openCart" href="#0">Cart</a></div>
 <!-- NAVIGATIONS -->
 <nav id="main-nav">
