Broke to multiple templates

--- a/client/views/application/layout.html
+++ b/client/views/application/layout.html
@@ -1,5 +1,23 @@
 <template name="layout">
+{{>header}}
 
-				{{> yield}}  
 
+{{> yield}}  
+
+<!-- About US-->
+{{>aboutUs}}
+
+<!---End About US-->
+<!-- Catering -->
+{{>catering}}
+<!---End Catering-->
+
+				
+  <!-- FOOTER -->
+
+  {{>footer}}
+
+  <!-- END / FOOTER --> 
+
+  {{>cart}}
   </template>
