--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -1,4 +1,5 @@
 <template name="cart">
+<div id="cd-shadow-layer"></div>
 <!-- Shopping Cart -->
 <div id="cd-cart">
   <div class="minicart-wrap">
@@ -6,20 +7,16 @@
       <p>&nbsp; </p>
       <h2 class="xsm text-uppercase text-center"  style="font-family: 'Rock Salt';">TOGO Order</h2>
       <ul class="minicart-list">
+        {{#each shopCart}}
         <li>
-          <div class="product-thumb"> <img src="http://lorempixel.com/30/30/food/" alt=""> </div>
-          <div class="product-name"> <a href="#">Onion Ootappa</a> </div>
-          <div class="qty-wrap"> <span class="product-quantity"> <span class="quantity">2</span> </span> <span class="amount">$48</span> </div>
-          <div class="product-remove"> <a href="#">x</a> </div>
-        </li>
-        <li>
-          <div class="product-thumb"> <img src="http://lorempixel.com/30/30/food/" alt=""> </div>
-          <div class="product-name"> <a href="#">Panner Masala Dosa</a> </div>
-          <div class="qty-wrap"> <span class="product-quantity"> <span class="quantity">2</span> serves. </span> <span class="amount">$48</span> </div>
-          <div class="product-remove"> <a href="#">x</a> </div>
-        </li>
+          <div class="col-xs-7"  align="left"> {{productname}}</div>
+          <div><input placeholder="1" class="col-xs-1 prodqty" size="2" maxlength="2" /></div>
+          <div class="col-xs-2"> <span class="amount pull-right" >{{currency price}} </span></div>
+        </li>  
+        {{/each}}
       </ul>
-      <div class="minicart-total"> Total <span class="amount pull-right">$120</span> </div>
+      <br><br>
+      <div class="minicart-total" style="background-color:lightyellow;">Total (Including Tax) <span class="amount pull-right" >{{currency shopCart.total}}</span> </div>
       <div class="minicart-total"> Your Details:<br>
         <br>
         <p>
@@ -33,6 +30,6 @@
       <a href="#0" class="checkout-btn">Place Order</a> </div>
   </div>
 </div>
-<!-- END Shoppingcart -->
+<!-- END Shoppingcart --> 
 
 </template>
