--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -9,25 +9,39 @@
       <ul class="minicart-list">
         {{#each shopCart}}
         <li>
-          <div class="col-xs-7"  align="left"> {{productname}}</div>
-          <div><input placeholder="1" class="col-xs-1 prodqty" size="2" maxlength="2" /></div>
+          <div class="col-xs-7"  align="left"> {{Name}}</div>
+          <div><input class="col-xs-1 prodqty" size="2" maxlength="2" value={{qty}}/></div>
           <div class="col-xs-2"> <span class="amount pull-right" >{{currency price}} </span></div>
         </li>  
+        <br><hr style=" border-top: 1px dotted grey;" width="90%">
+        {{else}}
+
+        <li> 
+          <div class="col-xs-10 minicart-total"> <span>No Items in the cart, please add from the menu.</span></div>
+        </li>
         {{/each}}
       </ul>
       <br><br>
+
+      {{#if shopCart.itemCount }}
+
       <div class="minicart-total" style="background-color:lightyellow;">Total (Including Tax) <span class="amount pull-right" >{{currency shopCart.total}}</span> </div>
       <div class="minicart-total"> Your Details:<br>
         <br>
         <p>
-          <input class="text-warning" id="Phone" placeholder="Name">
+          <input class="text-warning" id="name" placeholder="Name">
           <br>
           <br>
           <input type="tel" class="text-warning" id="Phone" placeholder="Phone">
+          <br>
+          <input type="email" class="text-warning" id="email" placeholder="Email">
         </p>
       </div>
       <br>
-      <a href="#0" class="checkout-btn">Place Order</a> </div>
+      <a href="#0" class="checkout-btn">Place Order</a> 
+      {{/if}}
+
+    </div>  
   </div>
 </div>
 <!-- END Shoppingcart --> 
