--- a/client/views/template/header.html
+++ b/client/views/template/header.html
@@ -4,16 +4,17 @@
   <div id="logo"><a href="#main"><img  src="img/dosa-logo2.png" width="100" alt="Homepage" ></a></div>
   <div id="cd-hamburger-menu"><a class="cd-img-replace hamburgerMenu" href="#0">Menu</a></div>
   <div id="cd-cart-trigger"><a class="cd-img-replace openCart" href="#0">Cart</a></div>
+
+
+</header>
 <!-- NAVIGATIONS -->
 <nav id="main-nav">
   <ul style="font-family: 'Montserrat';">
-    <li> <a href="#menu" >Our Menu</a> </li>
-    <li> <a href="#aboutUs" >About Us</a> </li>
-    <li> <a href="#catering">Catering</a> </li>
-    <li> <a href="#findUs">Find Us</a> </li>
+    <li class="removeShadowMenu"> <a href="#menu" >Our Menu</a> </li>
+    <li class="removeShadowMenu"> <a href="#aboutUs" >About Us</a> </li>
+    <li class="removeShadowMenu"> <a href="#catering">Catering</a> </li>
+    <li class="removeShadowMenu"> <a href="#findUs">Find Us</a> </li>
   </ul>
 </nav>
-
-</header>
 
 </template>
