--- a/client/views/template/homePage.html
+++ b/client/views/template/homePage.html
@@ -20,8 +20,8 @@
 
 <!-- Main Content --> 
 <!-- Main > Start Menus-->
-<div class="col-xs-12" >
-  <div class="row"  id="menu">
+<div class="col-xs-12" id="menu">
+  <div class="row"  >
 
       {{#each categoryMenu}}
 
@@ -66,7 +66,7 @@
                       {{#if idOddNumberItems Value}}
                           <div class="col-lg-6" id="dummy">
                             <div class="the-menu-item ">
-                                <div class="image-wrap thumbnail">  </div>
+                                <div>  </div>
                                   <a  href="#">
                                       <div class="the-menu-body">
                                         <h4 class="xsm"></h4>
