--- a/client/views/template/footer.html
+++ b/client/views/template/footer.html
@@ -1,10 +1,10 @@
  <template name="footer">
 
   <footer id="footer" class="footer">
-      <div class="row"   id="address"> 
+      <div class="row"   id="address" style="padding:30px;"> 
         <div class="copyright col-xs-12 text-center">Powered by Websheets&#8482; </div>
         
-        <div class="address pull-left col-xs-6"> {{address.Value}}
+        <div class="pull-left col-xs-6" align="left"> {{address.Value}}
           <br>
           Phone: <a href="tel:{{phoneNumber.Value}}" class="phone">{{phoneNumber.Value}}</a> 
           <br>
