Temp confirmation page functional

--- a/client/views/template/aboutUs.html
+++ b/client/views/template/aboutUs.html
@@ -5,7 +5,7 @@
 <h1  align="center" > About Us </h1>
 {{# each aboutUs}}
 
-	<p class="lead">{{Value}}</p>
+	<p class="lead">{{this}}</p>
 
 {{/each}}
 
