--- a/client/views/template/catering.html
+++ b/client/views/template/catering.html
@@ -4,9 +4,9 @@
 <div class="row">
 <h1  align="center" id="catering"> Catering </h1>
 
-{{# each catering}}
+{{# each cateringArray catering}}
 
-	<p class="lead">{{Value}}</p>
+	<p class="lead">{{this}}</p>
 
 {{/each}}
 
