--- a/client/stylesheets/plaindosa-style.css
+++ b/client/stylesheets/plaindosa-style.css
@@ -268,8 +268,8 @@ header {
 	-ms-transform: translateY(-50%);
 	-o-transform: translateY(-50%);
 	transform: translateY(-50%);
-	width: 32px;
-	height: 32px;
+	width: 90px;
+	height: 90px;
 	border-radius: 50%;
 	background: url("../img/cd-remove-item.svg") no-repeat center center;
 }
@@ -487,6 +487,7 @@ MiniCart
 	top: 35px;
 	opacity: 1;
 	visibility: visible;
+	
 }
 .minicart-wrap .minicart-body h4 {
 	margin: 0;
@@ -494,11 +495,11 @@ MiniCart
 }
 .minicart-wrap .minicart-body .minicart-list {
 	margin: 0;
-	border-top: 4px solid #eee;
+	border-top: 8px solid #eee;
 }
 .minicart-wrap .minicart-body .minicart-list li {
-	margin: 0;
-	padding: 12px 18px;
+	margin: 0px;
+	padding: 10px 2px;
 	position: relative;
 }
 .minicart-wrap .minicart-body .minicart-list li:before {
@@ -522,6 +523,7 @@ MiniCart
 	font-family: "Montserrat", sans-serif;
 	font-size: 12px;
 	color: #666;
+	
 }
 .minicart-wrap .minicart-body .minicart-list li .qty-wrap .quantity {
 	margin-left: 0;
@@ -544,6 +546,7 @@ MiniCart
 	font-size: 16px;
 	color: #000;
 	padding: 15px;
+	
 }
 .minicart-wrap .minicart-body .minicart-footer {
 	border-top: 4px solid #eee;
@@ -856,45 +859,4 @@ background:#000
 }
 .xsm a, h6 a {
 	color: inherit;
-}
-.select-custom {
-	position: relative;
-	z-index: 9;
-}
-.select-custom .select-custom {
-	position: static !important;
-}
-select, .select {
-	position: relative;
-	display: block;
-	height: 40px;
-	line-height: 40px;
-	background-color: #0F0F0F;
-	border: 1px solid #666;
-	color: #fff;
-	margin: 0 !important;
-	padding: 0 17px !important;
-	font-family: "Montserrat", sans-serif;
-	font-weight: 400;
-	font-size: 14px;
-	width: 100%;
-	text-align: left;
-	z-index: -1;
-}
-select option {
-	padding: 10px 20px;
-	background-color: #0F0F0F;
-}
-.select {
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-.select-custom .fa {
-	position: absolute;
-	line-height: 42px;
-	top: 0;
-	right: 17px;
-	font-size: 16px;
-	color: #fff;
 }
