--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -1,18 +1,55 @@
 <template name="confirmation">
 
 <table align="center" cellpadding="0" cellspacing="0" class="container-for-gmail-android" width="100%">
+  <tr>
+    <td align="left" valign="top" width="100%" style="background:repeat-x url(/img/_bg_top_02.jpg) #ffffff;">
+      <center>
+       <img src="/img/transparent.png" class="force-width-gmail">
+        <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#000" >
+          <tr>
+            <td width="100%" height="80" valign="top" style="text-align: center; vertical-align:middle;">
+            <!--[if gte mso 9]>
+            <v:rect xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false" style="mso-width-percent:1000;height:80px; v-text-anchor:middle;">
+              <v:fill type="tile" src="http://s3.amazonaws.com/swu-filepicker/4E687TRe69Ld95IDWyEg_bg_top_02.jpg" color="#ffffff" />
+              <v:textbox inset="0,0,0,0">
+            <![endif]-->
+              <center>
+                <table cellpadding="0" cellspacing="0" width="100%" class="w320">
+                  <tr>
+                    <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;">
+                      <img height="30" src="/img/dosa-logo2.png" alt="Dosa Express Logo" />
+                      
+                    </td>
+                    <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d;">
 
-	  <tr>
+                   <a href="http://twitter.com/dosaexpress"><img height="25" src="https://g.twimg.com/Twitter_logo_blue.png" alt="twitter" /></a>
+<!-- Social Buttons             
+<a href=""><img width="45" height="45" src="http://placehold.it/45x45" alt="facebook" /></a>
+                      <a href=""><img width="45" height="45" src="http://placehold.it/45x45" alt="rss" /></a>
+                      -->
+                    </td>
+                  </tr>
+                </table>
+              </center>
+              <!--[if gte mso 9]>
+              </v:textbox>
+            </v:rect>
+            <![endif]-->
+            </td>
+          </tr>
+        </table>
+      </center>
+    </td>
+  </tr>
+  <tr>
     <td align="center" valign="top" width="100%" style="background-color: #f7f7f7;" class="content-padding">
       <center>
-        <table cellspacing="0" cellpadding="0" width="600" class="w320">
+        <table cellspacing="0" cellpadding="0" width="100%" class="w320">
           <tr>
-            <td>
-              <h1 >{{customerName UniqueId}}, Thank you! </h1><br /></td>
+            <td class="header-lg"  style="font-family: 'Rock Salt';"> {{customerName UniqueId}} , Thank You !</td>
           </tr>
-
           <tr>
-            <td class="free-text"> 
+            <td class="free-text">              
 
               {{#each confirmation}}
 
@@ -20,75 +57,86 @@
 
               {{/each}}
             </td>
-          </tr>
-          <tr>
-            <td class="button">
-              <div><!--[if mso]>
-                <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://" style="height:45px;v-text-anchor:middle;width:155px;" arcsize="15%" strokecolor="#ffffff" fillcolor="#ff6f6f">
-                  <w:anchorlock/>
-                  <center style="color:#ffffff;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:regular;">My Account</center>
-                </v:roundrect>
-              <![endif]-->
-              <a href="http://"
-              style="background-color:#ff6f6f;border-radius:5px;color:#ffffff;display:inline-block;font-family:'Cabin', Helvetica, Arial, sans-serif;font-size:14px;font-weight:regular;line-height:45px;text-align:center;text-decoration:none;width:255px;-webkit-text-size-adjust:none;mso-hide:all;">Check Status of Your Order</a></div>
-            </td>
-          </tr>
-          <tr>
-            <td class="w320">
-              <table cellpadding="0" cellspacing="0" width="100%">
-                <tr>
-                  <td class="mini-container-left">
-                    <table cellpadding="0" cellspacing="0" width="100%">
-                      <tr>
-                        <td class="mini-block-padding">
-                          <table cellspacing="0" cellpadding="0" width="100%" style="border-collapse:separate !important;">
-                            <tr>
-                              <td class="mini-block">
-                              <span class="header-sm">Pickup Address</span>
-                                  <br />
-                                    <b>Dosa Express</b>
-                                  <br/>
-                                    {{address.Value}}
-                                  <br />
-                                  Phone: <a href="tel:{{phoneNumber.Value}}" class="phone">{{phoneNumber.Value}}</a> 
-                                  
-                                  Fax: <a href="tel:{{faxNumber.Value}}" class="phone">{{faxNumber.Value}}</a> 
-                                  <br/>
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                  <td class="mini-container-right">
-                    <table cellpadding="0" cellspacing="0" width="100%">
-                      <tr>
-                        <td class="mini-block-padding">
-                          <table cellspacing="0" cellpadding="0" width="100%" style="border-collapse:separate !important;">
-                            <tr>
-                              <td class="mini-block">
 
-                                <span class="header-sm">Order Number</span><br />
-                                #{{orderNumber UniqueId}}<br />
-                                  <br />
-                                
-                              </td>
+          </tr>
+          <tr>
+            <td class="mini-block-container">
+              <table cellspacing="0" cellpadding="0" width="100%"  style="border-collapse:separate !important;">
+                <tr>
+                  <td class="mini-block">
+                  <span class="header-sm highlight">Your order Number is [ {{orderNumber UniqueId}} ]</span>
+                  <br />  <br /> 
+                    <table cellpadding="0" cellspacing="0" width="100%">
+                      <tr>
+                        <td class="progress-bar">
+                          <table cellpadding="0" align="center" cellspacing="0" width="10%">
+                            <tr>
+
+                              <!-- STEP ONE -->
+                              <td class="step">
+                                <img src="/img/one-on.jpg" alt="Order Placed" /><br />
+                                Order Placed</td>
+
+                               <!-- STEP TWO -->
+                              <td class="step active">
+                                <img src="/img/two.jpg" alt="In Kitchen" /><br />
+                                In Kitchen</td>
+
+                               <!-- STEP THREE -->
+                              <td class="step">
+                                <img src="/img/three.jpg" alt="step one" /><br />
+                                <!-- ready for pickup
+                                <img src="http://www.appollo11.com/a51/email/three-on.jpg" alt="step one" /><br />-->
+                                Ready for Pickup</td>
+
                             </tr>
                           </table>
                         </td>
                       </tr>
+                      <tr>
+                        <td class="button">
+
+                          <!--
+                          <div> -->
+
+                          <!--[if mso]>
+                            <v:roundrect xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w="urn:schemas-microsoft-com:office:word" href="http://" style="height:45px;v-text-anchor:middle;width:155px;" arcsize="15%" strokecolor="#ffffff" fillcolor="#ff6f6f">
+                              <w:anchorlock/>
+                              <center style="color:#ffffff;font-family:Helvetica, Arial, sans-serif;font-size:14px;font-weight:regular;">Check Status</center>
+                            </v:roundrect>
+                          <![endif]-->
+                          <!--
+                          <a href="#" style="background-color:#ff6f6f;border-radius:5px;color:#ffffff;display:inline-block;font-family:'Cabin', Helvetica, Arial, sans-serif;font-size:14px;font-weight:regular;line-height:45px;text-align:center;text-decoration:none;width:155px;-webkit-text-size-adjust:none;mso-hide:all;">Check Status</a>
+                        </div>
+                        <br />
+                         -->
+                        <hr color="#CFCFCF" width="80%" size="1" align="center" />
+                          <table cellspacing="0" cellpadding="0" width="90%" align="center" >
+                            <tr>
+                              <td ><br /><span class="header-sm "  style="font-family: 'Rock Salt';">Pickup at</span> <br />
+                                <br />
+                                <a href="https://www.google.com/maps/place/4%2F100-102+Pacific+Hwy,+Waitara+NSW+2077,+Australia"><span> <strong>DosaHouse</strong><br />
+                                    {{address.Value}}<br />
+                                      <br />
+                              </span></a>
+                              <a href="tel:{{phoneNumber.Value}}" class="phone">{{phoneNumber.Value}}</a></td>
+                            </tr>
+                            
+                          </table>
+                        </td>
+                      </tr>
+
                     </table>
                   </td>
                 </tr>
               </table>
             </td>
           </tr>
-        </table>
+        </table>                         
+
       </center>
     </td>
   </tr>
-
 
     <tr>
     <td align="center" valign="top" width="100%" style="background-color: #ffffff;  border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5;">
@@ -142,11 +190,11 @@
                     </td>
                     <td class="item-col quantity" style="text-align:right; padding-right: 10px; border-top: 1px solid #cccccc;"><span class="total-space">Subtotal</span> <br />
                       <span class="total-space">Tax</span> <br />
-                      <span class="total-space">Delivery Fee</span> <br />
+                      <!-- <span class="total-space">Delivery Fee</span> <br /> -->
                     <span class="total-space" style="font-weight: bold; color: #4d4d4d">Total</span></td>
                     <td class="item-col price" style="text-align: left; border-top: 1px solid #cccccc;"><span class="total-space">{{getSubTotal}}</span> <br />
                       <span class="total-space">{{getTax}}</span> <br />
-                      <span class="total-space">$0.00</span> <br />
+                      <!--<span class="total-space">$0.00</span> <br /> -->
                     <span class="total-space" style="font-weight:bold; color: #4d4d4d">{{getTotal}}</span></td>
                   </tr>  
                 </table>
@@ -157,8 +205,6 @@
     </td>
   </tr>
 
-
-
-</table>	
+</table>
 
 </template>
