--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -2,10 +2,9 @@
 
 <table align="center" cellpadding="0" cellspacing="0" class="container-for-gmail-android" width="100%">
   <tr>
-    <td align="left" valign="top" width="100%" style="background:repeat-x url(/img/_bg_top_02.jpg) #ffffff;">
+    <td align="left" valign="top" width="100%" >
       <center>
-       <img src="/img/transparent.png" class="force-width-gmail">
-        <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#000" >
+\        <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#000" >
           <tr>
             <td width="100%" height="80" valign="top" style="text-align: center; vertical-align:middle;">
             <!--[if gte mso 9]>
@@ -64,12 +63,12 @@
               <table cellspacing="0" cellpadding="0" width="100%"  style="border-collapse:separate !important;">
                 <tr>
                   <td class="mini-block">
-                  <span class="header-sm highlight">Your order Number is [ {{orderNumber UniqueId}} ]</span>
+                  <span class="header-sm highlight">Your Number Number is [ {{orderNumber UniqueId}} ]</span>
                   <br />  <br /> 
-                    <table cellpadding="0" cellspacing="0" width="100%">
+                    <table cellpadding="0" cellspacing="0" width="100%" align="center">
                       <tr>
-                        <td class="progress-bar">
-                          <table cellpadding="0" align="center" cellspacing="0" width="10%">
+                        <td class="progress-bar" align="center">
+                          <table cellpadding="0" align="center" cellspacing="0" width="300">
                             <tr>
 
                               <!-- STEP ONE -->
