--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -1,10 +1,11 @@
 <template name="confirmation">
 
 <table align="center" cellpadding="0" cellspacing="0" class="container-for-gmail-android" width="100%">
+
   <tr>
     <td align="left" valign="top" width="100%" >
       <center>
-\        <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#000" >
+        <table cellspacing="0" cellpadding="0" width="100%" bgcolor="#000" >
           <tr>
             <td width="100%" height="80" valign="top" style="text-align: center; vertical-align:middle;">
             <!--[if gte mso 9]>
@@ -16,7 +17,7 @@
                 <table cellpadding="0" cellspacing="0" width="100%" class="w320">
                   <tr>
                     <td class="pull-left mobile-header-padding-left" style="vertical-align: middle;">
-                      <img height="30" src="/img/dosa-logo2.png" alt="Dosa Express Logo" />
+                      <img height="30" src="https://dosahouseau.herokuapp.com/img/dosa-logo2.png" alt="Dosa Express Logo" />
                       
                     </td>
                     <td class="pull-right mobile-header-padding-right" style="color: #4d4d4d;">
@@ -40,6 +41,9 @@
       </center>
     </td>
   </tr>
+
+
+
   <tr>
     <td align="center" valign="top" width="100%" style="background-color: #f7f7f7;" class="content-padding">
       <center>
@@ -72,12 +76,12 @@
                             <tr>
 
                               <!-- STEP ONE -->
-                              <td class="step">
+                              <td class="step active">
                                 <img src="/img/one-on.jpg" alt="Order Placed" /><br />
                                 Order Placed</td>
 
                                <!-- STEP TWO -->
-                              <td class="step active">
+                              <td class="step ">
                                 <img src="/img/two.jpg" alt="In Kitchen" /><br />
                                 In Kitchen</td>
 
