--- a/client/views/template/confirmation.html
+++ b/client/views/template/confirmation.html
@@ -104,7 +104,7 @@
                                 {{#if isInKitchen UniqueId }}
 
                                        <!-- STEP TWO -->
-                                      <td class="step ">
+                                      <td class="step active">
                                         <img src="/img/two-on.jpg" alt="In Kitchen" /><br />
                                         In Kitchen</td>
                                 {{else}}
@@ -118,14 +118,14 @@
 
                                 {{#if isSaleComplete UniqueId}}
 
-                                      <td class="step">
-                                      <img src="/img/three-on.jpg" alt="step one" /><br />
+                                      <td class="step active">
+                                      <img src="/img/three-on.jpg" alt="Ready for Pickup" /><br />
                                       Ready for Pickup</td>
 
                                 {{else}}
                                      <!-- STEP THREE -->
                                     <td class="step">
-                                      <img src="/img/three.jpg" alt="step one" /><br />
+                                      <img src="/img/three.jpg" alt="Ready for Pickup" /><br />
 
                                       Ready for Pickup</td>
 
