--- a/client/views/template/cart.html
+++ b/client/views/template/cart.html
@@ -38,10 +38,10 @@
         <div class="minicart-total"> Your Contact Information:<br>
           <br>
           <p>
-              <input class="text-warning" id="contactName" name="contactName" placeholder="Name">
+              <input class="text-warning" id="contactName" name="contactName" placeholder="Name" required><sub>*</sub>
               <br>
               <br>
-              <input type="email" class="text-warning" id="inputEmail" name="email" placeholder="Email">
+              <input type="email" class="text-warning" id="inputEmail" name="email" placeholder="Email" required><sub>*</sub>
               <br>
               <br>
               <input type="tel" class="text-warning" id="intputPhoneNumber" name="phoneNumber"  placeholder="Phone Number">
